# nimma-ai-retail-shipment-data-preparation

./: README.md  pyproject.toml
src/: data_extractor.py
